--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,9 +2,20 @@ input {
 	tcp {
 		port => 5000
 	}
+	http {
+		port => 31311
+		codec => json
+		user => elastic
+		password => changeme
+	}
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+ split {
+   field => "events"
+ }
+}
 
 output {
 	elasticsearch {
