--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,5 @@ script:
   # Verifications
   - sleep 90
   - docker-compose logs
-  - curl --retry 10 --retry-delay 5 -D- http://localhost:9200/ -u elastic:changeme
-  - curl --retry 10 --retry-delay 5 -D- http://localhost:5601/api/status -u elastic:changeme
+  - curl --retry 10 --retry-delay 5 -D- http://localhost:9200/ -u elastic:D4524CF76C9B4DFA942EB492810F1CC0
+  - curl --retry 10 --retry-delay 5 -D- http://localhost:5601/api/status -u elastic:D4524CF76C9B4DFA942EB492810F1CC0
