--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,21 +6,21 @@ input {
 		port => 31311
 		codec => json
 		user => elastic
-		password => changeme
+		password => D4524CF76C9B4DFA942EB492810F1CC0
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
-filter {
- split {
-   field => "events"
- }
-}
+# filter {
+# 	split {
+#     	field => "events"
+# 	}
+# }
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => elastic
-		password => changeme
+		password => D4524CF76C9B4DFA942EB492810F1CC0
 	}
 }
